# cmake-log4cxx

./: CMakeLists.txt  README.MD  build.sh  log.properties  main.cpp
cmake/: FindLog4cxx.cmake
